--- a/src/pages/registerLogin.css
+++ b/src/pages/registerLogin.css
@@ -9,7 +9,7 @@
 }
 .registerform,.loginform{
     background-color:rgb(238, 232, 232);
-    height:30rem;
+    height:38rem;
     width: 30rem;
     
     border-radius: 5px;
@@ -70,6 +70,16 @@ input{
     width: fit-content;
     height: fit-content;
     color:black;
+}
+.errordiv{
+    background-color: rgb(255, 111, 111);
+    width: 50%;
+    height: fit-content;
+    padding:1rem;
+    text-align: center;
+    justify-content: center;
+    border-radius: 5px;
+    border: 2px solid rgba(70, 70, 70,);
 }
 
 
