--- a/src/components/App.css
+++ b/src/components/App.css
@@ -55,6 +55,7 @@ button{
   justify-content:center;
   height: 30%;
   color:white;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
 }
 .kiemelth2{
   font-family: 'Kaisei Opti', sans-serif;
