--- a/src/components/App.css
+++ b/src/components/App.css
@@ -58,7 +58,8 @@ button{
   box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
 }
 .kiemelth2{
-  font-family: 'Kaisei Opti', sans-serif;
+  font-family: "Microsoft Tai Le";
+  font-weight: 600;
   text-align: center;
   color:rgb(4, 13, 18);
   margin:0;
@@ -68,7 +69,8 @@ button{
   text-shadow: 1px 1px rgba(4, 13, 18,0.1);
 }
 .legfrissebb{
-  font-family: 'Kaisei Opti', sans-serif;
+  font-family: "Microsoft Tai Le";
+  font-weight: 600;
   color:#040D12;
   margin:0;
   border-top-right-radius: 1rem;
